refactor y ver consultas

--- a/citasMedicas/web/index.html
+++ b/citasMedicas/web/index.html
@@ -16,6 +16,7 @@ and open the template in the editor.
         <p><a href="listaPacientes.jsp">Mostrar Pacientes</a></p>
         <p><a href="AgregarCita">Nueva Cita</a></p>
         <!-- <p><a href="VerCitas">Ver Citas</a></p>/-->
-         <p><a href="BuscarPorNombre">Buscar citas por nombre</a></p>
+        <p><a href="BuscarPorNombre">Buscar citas por nombre</a></p>
+        <p><a href="VerConsultas">Buscar consultas</a></p>
     </body>
 </html>
