--- a/citasMedicas/web/index.html
+++ b/citasMedicas/web/index.html
@@ -11,12 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+    <center>
         <h3>SISTEMA DE CONTROL DE CITAS MEDICAS</h3>
         <p><a href="altaPaciente.jsp">Altas de Pacientes</a></p>
         <p><a href="listaPacientes.jsp">Mostrar Pacientes</a></p>
         <p><a href="AgregarCita">Nueva Cita</a></p>
-        <!-- <p><a href="VerCitas">Ver Citas</a></p>/-->
-        <p><a href="BuscarPorNombre">Buscar citas por nombre</a></p>
+        <p><a href="BuscarPorNombre">Buscar citas</a></p>
         <p><a href="VerConsultas">Buscar consultas</a></p>
+    </center>
     </body>
 </html>
